# cli-router

./: .gitignore  AGENTS.md  CHANGELOG.md  MEMORY.md  PRD.md  README.md  STATE.md  pyproject.toml
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: agent-drift-watchdog.yml  publish.yml  test.yml
cli_router/: __init__.py  artifacts.py  cli.py  config.py  doctor.py  extractors.py  failures.py  logs.py  modelcache.py  models.py  receipts.py  runner.py  runs.py  streamfmt.py  tools.py  tui.py  workflows.py
cli_router/presets/: __init__.py  claude.yaml  codex.yaml  generic.yaml  grok.yaml  hermes.yaml
docs/: releasing.md
docs/agent-loops/: self-hosted-runner.md
examples/: claude_codex.yaml  cli-router.yaml  local_models.yaml
scripts/: check_release.py
scripts/agent/: apply_drift_fix.sh  build_prompt.py  detect_drift.py  preflight.py  validate_patch.py
tests/: test_agent_scripts.py  test_cli.py  test_config.py  test_doctor.py  test_extractors.py  test_failures.py  test_logs.py  test_modelcache.py  test_models.py  test_release.py  test_runner.py  test_runs.py  test_streamfmt.py  test_tui.py  test_version.py  test_workflows.py
