[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cli-router"
version = "0.3.0"
description = "A simple Python CLI router for AI planning and coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Razor", email = "tim@ephillips.net" }
]
keywords = [
  "ai",
  "cli",
  "claude",
  "codex",
  "grok",
  "agents",
  "llm",
  "router",
  "coding-agent"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.0"
]

[project.urls]
Homepage = "https://github.com/coolrazor007/cli-router"
Repository = "https://github.com/coolrazor007/cli-router"
Issues = "https://github.com/coolrazor007/cli-router/issues"

[project.scripts]
cli-router = "cli_router.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cli_router"]
