[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cli-router"
version = "0.3.1"
description = "A simple Python CLI router for AI planning and coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Razor", email = "tim@ephillips.net" }
]
keywords = [
  "ai",
  "cli",
  "claude",
  "codex",
  "grok",
  "agents",
  "llm",
  "router",
  "coding-agent"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Utilities"
]
dependencies = [
  "packaging>=24.0",
  "pyyaml>=6.0",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "coverage[toml]>=7.6",
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.9",
  "twine>=6.0"
]

[project.urls]
Homepage = "https://github.com/coolrazor007/cli-router"
Repository = "https://github.com/coolrazor007/cli-router"
Issues = "https://github.com/coolrazor007/cli-router/issues"

[project.scripts]
cli-router = "cli_router.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cli_router"]

[tool.coverage.run]
branch = true
source = ["cli_router", "scripts"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E9", "F", "I"]
